changed model userPlant, migration db
