# api/swagger/swagger.yaml
@@ -8,8 +8,10 @@ info:
     url: "https://opensource.org/licenses/mit-license.php"
 basePath: "/"
 tags:
-  - name: "plant"
+  - name: "userplants"
     description: "Everything about your Plants"
+  - name: "refplant"
+    description: "reference plants"
   - name: "user"
     description: "Operations about user"
   - name: "health"
@@ -474,10 +476,10 @@ paths:
               type: string
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /api/v1/plant:
+  /api/v1/user/plants:
     post:
       tags:
-        - "plant"
+        - "userplant"
       summary: "Add a new plant for user"
       description: "Add a new plant for user"
       operationId: "createUserPlant"
@@ -487,16 +489,16 @@ paths:
         - "application/json"
       parameters:
         - in: "body"
-          name: "plant"
+          name: "userplant"
           description: "New plant parameters of user"
           required: true
           schema:
-            $ref: "#/definitions/Plant"
+            $ref: "#/definitions/UserPlant"
       responses:
         "200":
           description: "Plant added"
           schema:
-            $ref: "#/definitions/Plant"
+            $ref: "#/definitions/UserPlant"
           headers:
             X-Request-Id:
               description: The request id this is a response to
@@ -583,18 +585,20 @@ definitions:
         type: "integer"
         format: "int32"
         description: "User Status"
-  Plant:
+  UserPlant:
     type: "object"
     required:
-      - "title"
+      - "name"
       - "photoUrls"
     properties:
       id:
         type: "integer"
         format: "int64"
-      title:
+      name:
         type: "string"
-        example: "rose"
+        example: "my super rose"
+      description:
+        type: "string"
       userId:
         type: "integer"
         format: "int64"
@@ -609,6 +613,42 @@ definitions:
         type: "integer"
         format: "int64"
         description: "plant's identifier from reference"
+      plantingDate:
+        type: "string"
+        description: "When the plant was planted"
+        format: "date"
+      wateringInterval:
+        type: "string"
+        description: "How often you water them"
+      lastWatering:
+        x-go-type:
+          type: "Time"
+          import:
+            package: "time"
+          hints:
+            noValidation: true
+      nextWatering:
+        x-go-type:
+          type: "Time"
+          import:
+            package: "time"
+          hints:
+            noValidation: true
+      createdAt:
+        x-go-type:
+          type: "Time"
+          import:
+            package: "time"
+          hints:
+            noValidation: true
+      modifiedAt:
+        x-go-type:
+          type: "Time"
+          import:
+            package: "time"
+          hints:
+            noValidation: true
+        x-nullable: true
   Garden:
     type: "object"
     required:
