# internal/api/restapi/operations/userplant/create_user_plant.go
@@ -1,6 +1,6 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-package plant
+package userplant
 
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the generate command
@@ -29,7 +29,7 @@ func NewCreateUserPlant(ctx *middleware.Context, handler CreateUserPlantHandler)
 	return &CreateUserPlant{Context: ctx, Handler: handler}
 }
 
-/* CreateUserPlant swagger:route POST /api/v1/plant plant createUserPlant
+/* CreateUserPlant swagger:route POST /api/v1/user/plants userplant createUserPlant
 
 Add a new plant for user
 
