# internal/api/restapi/operations/userplant/create_user_plant_urlbuilder.go
@@ -1,6 +1,6 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-package plant
+package userplant
 
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the generate command
@@ -35,7 +35,7 @@ func (o *CreateUserPlantURL) SetBasePath(bp string) {
 func (o *CreateUserPlantURL) Build() (*url.URL, error) {
 	var _result url.URL
 
-	var _path = "/api/v1/plant"
+	var _path = "/api/v1/user/plants"
 
 	_basePath := o._basePath
 	if _basePath == "" {
